# 42adv_matcha

./: .gitignore  compose.yaml  template.env
backend/: Dockerfile  populate.sh  start.sh
backend/app/: database.db  pyproject.toml
backend/app/sources/: database.py  dependencies.py  main.py  populate.py
backend/app/sources/routers/: auth.py  browsing.py  chat.py  profile.py  users.py  ws.py
frontend/: Dockerfile  nginx.conf
frontend/app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/app/src/: App.tsx  index.css  main.tsx
frontend/app/src/components/: AuthPageLayout.tsx  Footer.tsx  Header.tsx  LikeButton.tsx  PhotoCarousel.tsx  ProfileActionButtons.tsx  ProtectedRoute.tsx  Tab.tsx  location-card.tsx  profile-form.tsx  request-reset-password-form.tsx  reset-password-form.tsx  signin-form.tsx  signup-form.tsx  states.tsx
frontend/app/src/components/ui/: button.tsx  card.tsx  field.tsx  textarea.tsx
frontend/app/src/contexts/: AuthContext.tsx  auth-context-provider.tsx  authContext.ts  options-context-provider.tsx  options-context.ts
frontend/app/src/hooks/: useAuth.ts  useAuthContext.ts  useGeolocation.ts  useImages.ts  useOptionsContext.ts  useProfile.ts  useTags.ts  useWebSocket.ts
frontend/app/src/lib/: constants.ts  format-gps.ts  format-last-connection.ts  sort-and-filter-profiles.ts
frontend/app/src/pages/: Home.tsx  NotFound.tsx  Profile.tsx
frontend/app/src/pages/auth/: RequestResetPassword.tsx  ResetPassword.tsx  SignIn.tsx  SignUp.tsx  VerifyEmail.tsx
frontend/app/src/services/: api.ts
(+28 files in other folders)
